# voice_agent

voice-agent/: .gitignore  pyproject.toml  run.sh
voice-agent/screenshots/file910/: dashboard.b64
voice-agent/src/voice_agent/: run.sh  server.py
voice-agent/src/voice_agent/constants/: __init__.py
voice-agent/src/voice_agent/playwright/: automation_class.py  prompt.py  pywright.py
voice-agent/src/voice_agent/routes/: interaction.py
