[project]
name = "voice-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Ram-Deepak-2002",email = "deepak.ramanujam@orcazen.ai"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "openai (>=1.108.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "voice_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
